finished some styling to text

--- a/src/App.css
+++ b/src/App.css
@@ -1,13 +1,8 @@
 body {
-  background-image: url('http://i.imgur.com/0Dyd3wf.jpg');
+  background-image: url('http://natewren.com/themes/wallpaper2/radpack/radpack_2.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-attachment: fixed;
-}
-
-
-.thetimer, html, .buttonarea, .title{
-
 }
 
 .App {
@@ -16,22 +11,20 @@ body {
   margin-top: 20%;
 }
 
-.title {
-  font-family: 'Source Sans Pro', sans-serif;
-  color: #FFFFFF;
-  font-size: 80px;
-}
-
 .clock-days, .clock-hours, .clock-hours, .clock-minutes, .clock-seconds {
   display: inline;
-  font-family: 'Source Sans Pro', sans-serif;
+  /*font-family: 'Source Sans Pro', sans-serif;*/
   margin: 10px;
-  color: #FFFFFF;
+  color: #fd5afa;
+  -webkit-text-fill-color: rgba(253, 90, 250, 1);
+  -webkit-filter: drop-shadow(3px 3px 1px #441F62);
+  font-family: 'VT323', monospace;
+  font-size: 60px;
 }
 
 .specialday {
   font-size: 100px;
-  font-family: 'Oswald', sans-serif;
+  /*font-family: 'Oswald', sans-serif;*/
 }
 
 .Deadline {
@@ -43,18 +36,56 @@ body {
 }
 
 .btn-default {
-  font-family: 'Source Sans Pro', sans-serif;
+  /*font-family: 'Source Sans Pro', sans-serif;*/
   color: #FFFFFF;
-  background-color: #41194d;
+  background-color: #9b3898;
   border-color: #F4F1DE;
 }
 
 .btn-default:hover{
-  background-color: #9c295b;
+  background-color: #fd5afa;
   color: white;
 }
 
 .btn-default:visited{
   background-color: #9c295b;
   color: white;
+}
+
+.clockarea {
+margin: 10px
+}
+
+.header {
+position: relative;
+/*margin-top: 500px;*/
+}
+
+.title {
+  left: 0;
+  font-family: 'Mr Dafoe', cursive;
+  font-size: 150px;
+  margin-top: -170px;
+  color: #EB219B;
+  -webkit-text-fill-color: rgba(253, 90, 250, 1);
+  text-shadow: -3px -3px 0 #FFBAF2;
+  -webkit-filter: drop-shadow(3px 3px 1px #441F62);
+  -webkit-transform: skew(-5deg,-5deg);
+  font-weight: normal;
+  z-index: 1;
+
+}
+
+.specialday {
+  position: relative;
+  font-size: 150px;
+  font-family: 'Monoton', cursive;
+  line-height: 1.3;
+  /*margin: 0;*/
+  margin-top: -100px;
+  z-index: 2;
+  background-image: -webkit-linear-gradient(#022486 0%, #0AD0FD 30%, #BDFCFC 40%, #D8FFFF 44%, #00081C 44%, #00081C 50%, #074A67 52%, #1CD8FE 60%, #7FEDFE 62%, #96F5FC 70%, #0FD8FA 73%, #0BD2FD 88%, #AFFDFF 100%);
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-text-stroke: 1px #fff;
 }
